fix slow parallax performance on Safari

--- a/index.css
+++ b/index.css
@@ -84,12 +84,11 @@ body {
 
 #background-container::before {
     content: "";
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-attachment: fixed;
     background-image: url(images/background-macbook.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -343,6 +342,6 @@ body {
 
 @media screen and (max-width: 1199px) {
     #background-container::before {
-        background-attachment: scroll;
+        position: absolute;
     }
 }
